@@ -7,6 +7,8 @@
 	  - removed run-time checks from static functions
 	  - use 'size_t' for 'min_length' function parameter
 	  - code cleanup and optimizations
+	* include/rgxg/utils.h, lib/utils.c, src/escape.c:
+	  - added 'options' parameter to 'rgxg_utils_escape_string' function
 
 2013-04-10	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* include/rgxg/utils.h, lib/utils.c:
